kubernetes/pterodactyl-panel/prod-d1/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pterodactyl-panel
  namespace: pterodactyl-panel
spec:
  serviceName: pterodactyl-panel
  replicas: 1
  selector:
    matchLabels:
      app: pterodactyl-panel
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  template:
    metadata:
      labels:
        app: pterodactyl-panel
    spec:
      containers:
        - image: ghcr.io/pterodactyl/panel:latest
          imagePullPolicy: IfNotPresent
          name: pterodactyl-panel
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  curl -sf http://localhost:80 || exit 1
            initialDelaySeconds: 5
            periodSeconds: 10
            #timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  curl -sf http://localhost:80 || exit 1
            initialDelaySeconds: 5
            periodSeconds: 10
            #timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - name: pterodactyl-panel-config
              mountPath: /app/var/
            - name: pterodactyl-panel-config
              mountPath: /etc/nginx/http.d/
            - name: pterodactyl-panel-config
              mountPath: /etc/letsencrypt/
            - name: pterodactyl-panel-config
              mountPath: /app/storage/logs
  volumeClaimTemplates:
    - metadata:
        name: pterodactyl-panel-config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
