kubernetes/pterodactyl-panel/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pterodactyl-panel-service
  namespace: pterodactyl-panel
  labels:
    app: pterodactyl-panel
spec:
  type: ClusterIP
  selector:
    app: pterodactyl-panel
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  ipFamilyPolicy: SingleStack
