kubernetes/pterodactyl-panel/prod-d1/wings-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: wings-service
  namespace: pterodactyl-panel
  labels:
    app: pterodactyl-panel
subsets:
  - addresses:
      - ip: 10.15.21.150
    ports:
      - port: 443
