kubernetes/pterodactyl-panel/prod-d1/wings-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wings-service
spec:
  ports:
    - name: tls
      port: 443
      protocol: TCP
  clusterIP: None
